20130202 fmfconv.c: fix a crash when input file not exists (Sergio).
20130202 man/fmfconv.1: complete SYNOPSIS, SEE ALSO and AUTHOR sections. Remove
         FILES section. Punctuation fixes (Sergio).
20130203 man/snapconv.1: complete SYNOPSIS (Fred).
20130203 converter/romloader.cc: fix incomplete byte warning (thanks, Ivan
         Shmakov) (Fred).
20130212 man/audio2tape.1: fix input file specification (Fred).
20130216 AUTHORS,man/createhdf.1,man/raw2hdf.1: fix broken URLs (Sergio).
20130216 configure.ac,fmfconv_ff.c: fix the build on Debian stable and fix a
         crash when encoding H.264 (more from bug #272) (thanks, Fred) (Sergio).
20130216 fmfconv.c: fix help punctuation and document svcd profile (Sergio).
20130216 fmfconv.c: fix a crash when converting PCM stereo samples to mono
         (Sergio).
20130216 man/fmfconv.1: add some examples (Sergio).
20130216 fmfconv_ff.c: check the codec supports signed 16 bit PCM samples before
         trying to use them (Fred).
20130219 scl2trd.c: check the return code from read() and write() (Sergio).
20130223 fmfconv_ff.c: use the same encoder on later stages (Sergio).
20130223 fmfconv.c: force mpeg4 video encoder for youtube profile and don't
         force AAC audio encoder for ipod profile (Sergio).
20130407 converter/{romloader.cc,romloader.h}: include read and computed
         checksum (thanks, Ivan Shmakov) (Fred).
20130407 converter/romloader.cc: print flag byte (thanks, Ivan Shmakov) (Fred).
20130516 man/*.1: update date and revision for 1.1 release.
20130516 ChangeLog: update date in main changelog.
20130517 README: update date for 1.1 release.
20130518 man/fmfconv.1: update date for 1.1 release (Sergio).
20130520 configure.ac: fix typo in the CPPFLAGS variable name (patch #310)
         (Alberto).
20130520 man/fmfconv.1: fix syntax error (patch #311) (Alberto).
20130526 Makefile.am: distribute ChangeLog in Windows packages (Sergio).
20130526 Makefile.am: add compat/getopt.h into the dist tarball (Sergio).